Deployments/basicmicroserviceapi-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: basicmicroserviceappnp-service
spec:
  type: NodePort
  selector:
    app: basicmicroservicearticleapp
  ports:
    - name: basicmicroservicearticleapp
      protocol: TCP
      port: 80
      targetPort: 80
