Deployments/basicmicroservicearticleapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basicmicroservicearticleapp-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basicmicroservicearticleapp
  template:
    metadata:
      labels:
        app: basicmicroservicearticleapp
    spec:
      containers:
        - name: basicmicroservicearticleapp
          image: basicmicroservicearticleapi:5.0
---
apiVersion: v1
kind: Service
metadata:
  name: basicmicroservicearticleapp-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: basicmicroservicearticleapp
  ports:
  - name: basicmicroservicearticleapp
    protocol: TCP
    port: 80
    targetPort: 80
  - name: grpcserverappgrpc
    protocol: TCP
    port: 666
    targetPort: 666
