Deployments/basicmicroserviceauthorapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basicmicroserviceauthorapp-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basicmicroserviceauthorapp
  template:
    metadata:
      labels:
        app: basicmicroserviceauthorapp
    spec:
      containers:
        - name: basicmicroserviceauthorapp
          image: basicmicroserviceauthorapi:2.0
---
apiVersion: v1
kind: Service
metadata:
  name: basicmicroserviceauthorapp-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: basicmicroserviceauthorapp
  ports:
  - name: basicmicroserviceauthorapp
    protocol: TCP
    port: 80
    targetPort: 80
