Deployments/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: basicmic.com
      http:
        paths:
          - path: /api/article
            pathType: Prefix
            backend:
              service:
                name: basicmicroservicearticleapp-clusterip-service
                port:
                  number: 80
          - path: /api/author
            pathType: Prefix
            backend:
              service:
                name: basicmicroserviceauthorapp-clusterip-service
                port:
                  number: 80
